--- a/lean/luci-app-flowoffload/po/zh-cn/flowoffload.po
+++ b/lean/luci-app-flowoffload/po/zh-cn/flowoffload.po
@@ -64,8 +64,13 @@ msgstr "启用dnsmasq去广告"
 msgid "dnsmasq killqqad"
 msgstr "dnsmasq去广告"
 
+msgid "TCP Congestion Control Algorithm"
+msgstr "TCP拥塞控制算法"
+
+
+
 msgid "AdGuardHome After setting up, shut down DNS acceleration normally and save configuration file"
-msgstr "AdGuardHome设置完后正常关闭dns加速即可保存配置文件.AdGuardHome管理页面IP:3000 管理账号密码：AdGuardHome"
+msgstr "AdGuardHome管理页面IP:3333 管理账号密码：AdGuardHome"
 
 msgid "Dnsmasq rejects IPv6 parsing and optimizes domestic complex dual-stack network"
 msgstr "dnsmasq不返回ipv6解析结果,优化国内复杂双栈网络"
